Refactor search into request strategies